--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,8 @@
         <div class="footer-manu">
           <ul>
             <li><a href="#">About Us</a></li>
-            <li><a href="{{ site.baseurl }}/contact">Contact us</a></li>
-            <li><a href="#">How it works</a></li>
+            <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
             <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-            <li><a href="#">Terms</a></li>
           </ul>
         </div>
         <p>Copyright &copy; Design &amp; Developed by <a href="daronobrien.me">Daron O'Brien</a>. All rights reserved.</p>
